cont. (1) fixing bugs in too much nested scss

--- a/css/index.css
+++ b/css/index.css
@@ -12,8 +12,6 @@
 }
 .header .container {
   display: flex;
-  height: max-content;
-  justify-content: space-between;
   font-family: "raleway";
   align-items: center;
 }
@@ -27,14 +25,32 @@
   margin: 17px;
   opacity: 1;
 }
-.header nav {
-  position: absolute;
-  left: 0;
-  top: 95px;
-  width: 100%;
-  flex-direction: column;
-  background-color: white;
-  padding-bottom: 20px;
+.header .navbar-list {
+  padding: 0 26px;
+}
+.header .navbar-list:last-child {
+  padding-right: 0;
+}
+.header .navbar-content {
+  font-family: "Open Sans";
+  font-size: 11px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 3.28px;
+  top: 100px;
+  left: 25px;
+  width: 60px;
+  height: 15px;
+  display: block;
+  padding: 14px 20px;
+  text-align: center;
+  text-decoration: none;
+  color: #A5A5A5;
+  opacity: 1;
+}
+.header .navbar-content:hover {
+  color: #000000;
+  transition: 2s;
 }
 .header .menu-btn {
   display: none;
@@ -69,27 +85,6 @@
 .header .nav-list {
   list-style-type: none;
   padding: 0;
-}
-.header .navbar-content {
-  font-family: "Open Sans";
-  font-size: 11px;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 3.28px;
-  top: 100px;
-  left: 25px;
-  width: 60px;
-  height: 15px;
-  display: block;
-  padding: 14px 20px;
-  text-align: center;
-  text-decoration: none;
-  color: #A5A5A5;
-  opacity: 1;
-}
-.header .navbar-content:hover {
-  color: #000000;
-  transition: 2s;
 }
 
 @media screen and (max-width: 799px) {
